Refactor UTF-8 usage to StandardCharsets.UTF_8 and centralize constant definition
Signed-off-by: lance <leehaut@gmail.com>